--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1427,6 +1427,34 @@ $sk-skin-btn-default: #293756;
             }
         }
     }
+    
+    .help {
+        display: block;
+        text-align: center;
+        color: $color-body_text;
+        text-transform: uppercase;
+        &:hover {
+            color: $info-color;
+        }
+        i {
+            vertical-align: middle;
+            margin-right: 8px; 
+            color: $info-color;
+        }
+    }
+    #help-content {
+        display: none;
+    }
+    #help-content:target {
+        display: block;
+        text-align: center;
+        color: $color-sidebar;
+        text-transform: uppercase;
+        iframe {
+            margin-top: 1rem;
+        }
+    }
+
 }
 
 
